--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "browser": "dist/openmrs-esm-vue-template.js",
   "main": "src/index.ts",
   "scripts": {
-    "start": "openmrs develop",
+    "start": "yarn build && openmrs develop",
     "serve": "webpack serve --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
     "lint": "vue-cli-service lint",
